# agora_rtm_sdk_c

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: AgoraRtmSdk.cmake
include/: C_AgoraRtmBase.h  C_IAgoraRtmClient.h  C_IAgoraRtmLock.h  C_IAgoraRtmPresence.h  C_IAgoraRtmService.h  C_IAgoraRtmStorage.h  C_IAgoraService.h  C_IAgoraStreamChannel.h
include/bridge/: C_RtmEventHandlerBridge.h  RtmEventHandlerBridge.hh
samples/RTMProjectC/: CMakeLists.txt  RTMQuickStartC.c  clean_build.sh
src/: C_AgoraRtmBase.cpp  C_IAgoraRtmClient.cpp  C_IAgoraRtmLock.cpp  C_IAgoraRtmPresence.cpp  C_IAgoraRtmService.cpp  C_IAgoraRtmStorage.cpp  C_IAgoraStreamChannel.cpp
src/bridge/: C_RtmEventHandlerBridge.cpp  RtmEventHandlerBridge.cpp
